[package]
name = "rust-service-port-auditor"
version = "0.1.0"
edition = "2024"
authors = ["Senin Adın"]
description = "Async network auditor and vulnerability scanner"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2.1"
futures = "0.3"